# SkewedDataBalancing

./: .gitgnore  .gitignore  CMakeLists.txt  README.md
benchmark_results/: Benchmarking results.ipynb  expected_ration.csv  log_batch4_13.csv  log_batch4_14.csv  log_batch4_16.csv  log_batch4_17.csv  log_batch4_18.csv  log_batch4_19.csv  log_batch6_12.csv  log_batched_placement_11.csv  log_hardcoded2_18.csv  log_hardcoded_18.csv  log_hardcoded_19.csv  log_modulo6_08.csv  log_modulo6_09.csv  log_one_disk.csv  log_one_disk_02.csv  log_one_disk_08.csv  log_one_disk_09.csv  log_one_disk_10.csv  log_one_disk_12.csv  log_one_disk_13.csv  log_one_disk_14.csv  log_one_disk_15.csv  log_one_disk_16.csv  log_one_disk_17.csv  log_one_disk_18.csv  log_one_disk_19.csv  log_one_file_02.csv  log_round_robin_01.csv  log_round_robin_02.csv  log_round_robin_08.csv  log_round_robin_09.csv  log_round_robin_10.csv  log_round_robin_12.csv  (+17 more)
storage-engine/: CMakeLists.txt  blocks_to_be_loaded.csv  generate_dataset.cpp  main.cpp  pseudo_benchmark.cpp
storage-engine/data/: data_visualisation.ipynb  dataset1_float  dataset1_int
storage-engine/include/: data_generator.h  data_generator_impl.h  execute_query.h  storage_engine.h
storage-engine/src/: data_generator.cpp  execute_query.cpp  storage_engine.cpp
storage-engine/storage_metas/: benchmark_store_4  benchmark_store_4_block_metadata  store  store_block_metadata  store_nvme1  store_nvme10  store_nvme2  store_nvme3  store_nvme4  store_nvme5  store_nvme6  store_nvme7  store_nvme8  store_nvme9
storage-engine/tests/: test.cpp
(+7 files in other folders)
